[project]
name = "yetigz"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.14.1",
    "asyncio>=4.0.0",
    "beautifulsoup4>=4.15.0",
    "chardet>=7.4.3",
    "keyring>=25.7.0",
    "matplotlib>=3.11.0",
    "numpy>=2.5.1",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "psutil>=7.2.2",
    "pyqt6>=6.11.0",
    "pyserial>=3.5",
    "requests>=2.34.2",
    "scipy>=1.18.0",
    "unidecode>=1.4.0",
    "xlrd>=2.0.2",
]
